# mpmc-scheduler

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  sketch.odg
examples/: dynamic_dispatch.rs  interactive.rs
src/: lib.rs
