[package]
name = "mpmc-scheduler"
version = "0.3.1"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xpr03/mpmc-scheduler"
description = "multi-mpmc, cancellable, scheduler with rate limiting"
keywords = ["queue", "tokio","mpmc", "mpsc", "scheduler"]

[dependencies]
futures = "0.1"
npnc = "0.2"
bus = "2"

[dev-dependencies]
tokio = "0.1"
